@@ -8,13 +8,13 @@ import core.AbstractGameState;
 import games.pandemic.PandemicGameState;
 import games.pandemic.PandemicConstants;
 
+import java.util.Objects;
+
 import static utilities.CoreConstants.nameHash;
 import static utilities.CoreConstants.playersHash;
 
 
 public class MovePlayer implements IAction {
-
-
     int playerIdx;
     String destination;
 
@@ -27,18 +27,14 @@ public class MovePlayer implements IAction {
     public boolean execute(AbstractGameState gs) {
         PandemicGameState pgs = (PandemicGameState) gs;
         PropertyString prop = (PropertyString) pgs.getComponent(PandemicConstants.playerCardHash, playerIdx).getProperty(PandemicConstants.playerLocationHash);
-        BoardNode currentCity = ((PandemicGameState)gs).world.getNode(nameHash, prop.value);
-        BoardNode destinationCity = ((PandemicGameState)gs).world.getNode(nameHash, destination);
-
-        // todo there are more ways to move the player, when this function is called the player should already know if the move is legal or not
-//        if (checkNeighbours(currentCity, destinationCity) || checkResearchStations(currentCity, destinationCity)) {
-//            removePlayer((PandemicGameState)gs, prop.value, playerIdx);
-//            placePlayer((PandemicGameState)gs, destination, playerIdx);
-//        }
         removePlayer((PandemicGameState)gs, prop.value, playerIdx);
         placePlayer((PandemicGameState)gs, destination, playerIdx);
-
         return true;
+    }
+
+    @Override
+    public Card getCard() {
+        return null;
     }
 
     public static void placePlayer(PandemicGameState gs, String city, int playerIdx) {
@@ -47,33 +43,16 @@ public class MovePlayer implements IAction {
         prop.getValues().add(playerIdx);
 
         Card playerCard = (Card) gs.getComponent(PandemicConstants.playerCardHash, playerIdx);
-        playerCard.setProperty(PandemicConstants.playerLocationHash, new PropertyString(city));  // TODO: does this exist?
+        playerCard.setProperty(PandemicConstants.playerLocationHash, new PropertyString(city));
     }
 
     public static void removePlayer(PandemicGameState gs, String city, int playerIdx) {
         BoardNode bn = gs.world.getNode(nameHash, city);
         PropertyIntArrayList prop = (PropertyIntArrayList) bn.getProperty(playersHash);
-        prop.getValues().remove(new Integer(playerIdx));
+        prop.getValues().remove(Integer.valueOf(playerIdx));
 
         Card playerCard = (Card) gs.getComponent(PandemicConstants.playerCardHash, playerIdx);
         playerCard.setProperty(PandemicConstants.playerLocationHash, new PropertyString(null));
-    }
-
-    boolean checkNeighbours(BoardNode city1, BoardNode city2) {
-        PropertyStringArray neighbours = (PropertyStringArray) city1.getProperty(PandemicConstants.neighboursHash);
-        PropertyString name = (PropertyString) city2.getProperty(nameHash);
-        for (String neighbour : neighbours.getValues()) {
-            if (name.value.equals(neighbour)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    boolean checkResearchStations(BoardNode city1, BoardNode city2) {
-        PropertyBoolean research1 = (PropertyBoolean) city1.getProperty(PandemicConstants.researchStationHash);
-        PropertyBoolean research2 = (PropertyBoolean) city2.getProperty(PandemicConstants.researchStationHash);
-        return research1.value && research2.value;
     }
 
     public String getDestination(){
@@ -103,5 +82,10 @@ public class MovePlayer implements IAction {
 
     public int getPlayerIdx() {
         return playerIdx;
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(playerIdx, destination);
     }
 }
